# ICP-project

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.txt
examples/: dashboardConfig.json  simulatorConfig.json
src/: CMakeLists.txt  main.cpp  test_button.cpp  test_button.h
src/core/: CMakeLists.txt  action_listener.cpp  action_listener.hpp  callback.cpp  callback.hpp  client.cpp  client.hpp  utils.hpp
src/data/: data_model.cpp  data_model.hpp  topic.cpp  topic.hpp
src/explorer/: CMakeLists.txt  main.cpp  test_button.cpp  test_button.hpp
src/gui/: CMakeLists.txt  content_widget.ui  dashboard.cpp  dashboard.hpp  dashboard.ui  dashboard_customize_window.cpp  dashboard_customize_window.hpp  dashboard_customize_window.ui  dashboard_item.cpp  dashboard_item.hpp  dashboard_item.ui  explorer.cpp  explorer.hpp  explorer.ui  explorer_item.cpp  explorer_item.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  publish_window.cpp  publish_window.hpp  publish_window.ui  simulator.cpp  simulator.hpp  simulator.ui  simulator_device.cpp  simulator_device.hpp  title_selection_window.cpp  title_selection_window.hpp  title_selection_window.ui  topic_selection_window.cpp  topic_selection_window.hpp  topic_selection_window.ui
src/gui/data/: data_model.cpp  data_model.hpp  topic.cpp  topic.hpp
src/simulator/: CMakeLists.txt  main.cpp
